--- a/Code/Trending_tweets.ipynb
+++ b/Code/Trending_tweets.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "1e011249-09d9-48a5-a304-6280c77eb0b0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "8c4824a4-9980-45bc-8d76-ac516b7c3a9d",
    "metadata": {
     "tags": []
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extraction Date: 2022-06-05 04:20:00 Trending: #LaCorrupcionPetrista Start Time 2022-10-24 22:36:25.689846 Time extraction: 2022-10-24 22:37:55.044605\r"
+      "Extraction Date: 2022-06-19 22:30:00 Trending: #VivirSabroso Start Time 2022-10-25 21:24:56.022329 Time extraction: 2022-10-25 21:32:52.19812552.48502801\r"
      ]
     }
    ],
@@ -104,7 +104,10 @@
     "        number_days = 1\n",
     "        minutes_spam = 10\n",
     "        start_date_format = datetime.strptime(start_date, '%Y-%m-%d')\n",
-    "        trendings_df  = get_trendings(trending, start_date_format, number_days, minutes_spam )\n",
+    "        try:\n",
+    "            trendings_df  = get_trendings(trending, start_date_format, number_days, minutes_spam )\n",
+    "        except:\n",
+    "            trendings_df  = get_trendings(trending, start_date_format, number_days, minutes_spam )\n",
     "        trendings_df.to_parquet(newpath + file_name,\n",
     "                  compression='gzip')\n",
     "        trendings_keywords['Count'][i] = len(trendings_df)\n",
@@ -117,7 +120,9 @@
    "id": "541887b2-9b7b-4b99-ad79-e20201ca1a5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text\t"
+   ]
   }
  ],
  "metadata": {
