unifico los datos

--- a/Document/00_Intro Pages/01_Title.tex
+++ b/Document/00_Intro Pages/01_Title.tex
@@ -6,7 +6,7 @@
 
 \vspace*{-1cm}
 
-\textbf{\Large Aplicación de modelos de lenguaje para la identificación de emociones presentes en twitter durante el periodo de elecciones presidenciales en Colombia 2022}\\[10pt]
+\textbf{\Large Aplicación de modelos de lenguaje para la identificación de emociones en Twitter durante las elecciones presidenciales de 2022 en Colombia}\\[10pt]
 
 \vspace*{0.5cm}
 
