--- a/Code/Tweets_emotions.ipynb
+++ b/Code/Tweets_emotions.ipynb
@@ -2676,7 +2676,13 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
