--- a/Code/Cleaning.ipynb
+++ b/Code/Cleaning.ipynb
@@ -24,13 +24,155 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "2ae32f7c-735c-4b76-a565-f9d224cc86de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Neutro       91\n",
+       "Derecha      42\n",
+       "Izquierda    40\n",
+       "Name: Sector, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trendings_keywords = pd.read_csv('../Data/trendings.csv')\n",
+    "trendings_keywords['Sector'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c8d30e5d-09d6-45ae-b542-c3fd1eba7a24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trending</th>\n",
+       "      <th>Sector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>#NosUnimosONosJodemos</td>\n",
+       "      <td>Derecha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>#FedericoEsColombia</td>\n",
+       "      <td>Derecha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>#LoPeorDeEstasElecciones</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>#MiVotoEsPetroYFrancia</td>\n",
+       "      <td>Izquierda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>#MiVotoEsPetroYFrancia</td>\n",
+       "      <td>Izquierda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>#DePetroEspero</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>#PetroNecesita</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>#EsMuyImportante</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>#PetroBastaYa</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>#LosImpuestosDePetro</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>173 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     trending     Sector\n",
+       "0       #NosUnimosONosJodemos    Derecha\n",
+       "1         #FedericoEsColombia    Derecha\n",
+       "2    #LoPeorDeEstasElecciones     Neutro\n",
+       "3      #MiVotoEsPetroYFrancia  Izquierda\n",
+       "4      #MiVotoEsPetroYFrancia  Izquierda\n",
+       "..                        ...        ...\n",
+       "168            #DePetroEspero     Neutro\n",
+       "169            #PetroNecesita     Neutro\n",
+       "170          #EsMuyImportante     Neutro\n",
+       "171             #PetroBastaYa     Neutro\n",
+       "172      #LosImpuestosDePetro     Neutro\n",
+       "\n",
+       "[173 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trendings_keywords[['trending','Sector']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "id": "7d476806-5447-4ca8-9892-28bd16e1d73f",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_list = []\n",
-    "trendings_keywords = pd.read_csv('../Data/trendings.csv')\n",
     "for i in range(len(trendings_keywords)):\n",
     "    start_date = trendings_keywords['date'][i]\n",
     "    newpath = '../Data/Trendings/'+ start_date + '/'\n",
@@ -85,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "47bc39ab-fb45-46ff-9240-8d9c55bf6e0e",
    "metadata": {},
    "outputs": [],
@@ -95,180 +237,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fe0e8f23-5fe1-40d6-9c7c-7862abdfc0c8",
+   "execution_count": 30,
+   "id": "7d9ee3c0-f8a8-4f37-87b2-d078e565ae7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "total = len(cleaned)\n",
-    "perc_sample = 0.01\n",
-    "proportion = round(total*perc_sample)\n",
-    "sampled_df = cleaned.sample(proportion, random_state=1)\n",
-    "sampled_df = sampled_df.reset_index(drop=True)"
+    "cleaned_political = cleaned.merge(trendings_keywords[['trending','Sector']].drop_duplicates(), how='left', left_on='Trending', right_on='trending')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
-   "id": "9d339457-baba-46a0-9ed5-65c3f8a867df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel = pd.read_csv('../Data/SEL/SEL_full.txt', delimiter='\\t', encoding= 'ISO-8859-1')\n",
-    "sel  = sel.drop_duplicates(subset=['Palabra', 'Categoría'])\n",
-    "sel_list = list(sel['Palabra'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 298,
-   "id": "7628fc11-582a-4e83-97a0-bb550ecb9a21",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5036/1904514863.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  cleaned['tweet_split'] = cleaned['text'].str.replace('[^\\w\\s]','').str.lower()\n"
-     ]
-    }
-   ],
-   "source": [
-    "cleaned['tweet_split'] = cleaned['text'].str.replace('[^\\w\\s]','').str.lower()\n",
-    "cleaned['tweet_split'] = cleaned['tweet_split'].str.split()\n",
-    "emociones = list(sel['Categoría'].unique())\n",
-    "for i in emociones:\n",
-    "    cleaned[i] = 0.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 318,
-   "id": "c9eb38f4-82f5-46bb-9950-31f85bbbb6fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def emotional_values(df):\n",
-    "    text_list = df['tweet_split']\n",
-    "    text_length = df['Number_words']\n",
-    "    emo_values = dict.fromkeys(emociones, 0)\n",
-    "    for i in text_list:\n",
-    "        if i in sel_list:\n",
-    "            for j in sel[sel['Palabra'] == i]['Categoría']:\n",
-    "                emo_values[j] += float(sel[(sel['Palabra'] == i) & (sel['Categoría'] == j)][' PFA'])/text_length\n",
-    "    df[emociones] = [emo_values[i] for i in emociones]\n",
-    "    return(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 319,
-   "id": "d0606890-43a1-4a30-a8fa-c59e781950c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 746.3502352237701 seconds ---\n"
-     ]
-    }
-   ],
-   "source": [
-    "start_time = time.time()\n",
-    "cleaned_emotions = cleaned.apply(emotional_values, axis=1)\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 292,
-   "id": "754a5104-17c1-4504-bcaa-213a8d8eb6aa",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Alegría', 'Enojo', 'Miedo', 'Repulsión', 'Sorpresa', 'Tristeza']"
-      ]
-     },
-     "execution_count": 292,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "emociones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 332,
-   "id": "7a8e5dce-162d-4819-8580-c8b00484d654",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleaned_emotions['Emotion'] = cleaned_emotions[emociones].idxmax(axis=1)\n",
-    "cleaned_emotions['Emotion_prob'] = cleaned_emotions[emociones].max(axis=1)\n",
-    "cleaned_emotions['Emotion'] = np.where(cleaned_emotions['Emotion_prob'] == 0.0, 'Otra', cleaned_emotions['Emotion'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 356,
-   "id": "02772065-7d1b-419a-8edc-367c1853f468",
+   "execution_count": 31,
+   "id": "27a0f972-5457-4bd9-a7ab-be0973e50dd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Otra         167752\n",
-       "Alegría       63234\n",
-       "Tristeza      24350\n",
-       "Enojo         12195\n",
-       "Miedo         10381\n",
-       "Repulsión      6896\n",
-       "Sorpresa       6027\n",
-       "Name: Emotion, dtype: int64"
+       "Neutro       152594\n",
+       "Izquierda     86006\n",
+       "Derecha       52235\n",
+       "Name: Sector, dtype: int64"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaned_emotions.to_parquet('../Data/Full_dataset/data_filtered_emotions.gzip',\n",
-    "          compression='gzip')\n",
-    "cleaned_emotions['Emotion'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 364,
-   "id": "653f90fb-bf3c-4557-a60c-241406e81711",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emotions_df = []\n",
-    "for i in emociones:\n",
-    "    df = cleaned_emotions[cleaned_emotions['Emotion'] == i].sort_values(by=['Emotion_prob'], ascending=False)[['text', 'Emotion', 'Emotion_prob']].iloc[0:2000]\n",
-    "    emotions_df.append(df)\n",
-    "full_emotions_df = pd.concat(emotions_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 367,
-   "id": "584b4c6c-57e0-448d-9a4e-c68089742555",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_emotions_df.to_parquet('../Data/Emotional_tweets/raw_emotional_tweets.gzip',\n",
-    "          compression='gzip')"
+    "cleaned_political['Sector'].value_counts()"
    ]
   }
  ],
