--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -364,5 +364,12 @@
 	year={2020}
 }
 
+@article{plaza2021overview,
+	title={Overview of the EmoEvalEs task on emotion detection for Spanish at IberLEF 2021},
+	author={Plaza-del-Arco, Flor Miriam and Jim{\'e}nez Zafra, Salud M and Montejo R{\'a}ez, Arturo and Molina Gonz{\'a}lez, M Dolores and Ure{\~n}a L{\'o}pez, Luis Alfonso and Mart{\'\i}n Valdivia, Mar{\'\i}a Teresa},
+	year={2021},
+	publisher={Sociedad Espa{\~n}ola para el Procesamiento del Lenguaje Natural}
+}
+
 
 
