particiono los datos etiquetados

--- a/Code/Extraccion_tweets _sidorov.ipynb
+++ b/Code/Extraccion_tweets _sidorov.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "caa14792-6d03-4eb4-ab93-33941f2b1452",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tweepy\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -63,6 +64,78 @@
    "outputs": [],
    "source": [
     "emociones_tweets_df.to_csv('../Data/Sidorov/corpus_marcado6emociones_extracted.csv', index=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de4a8a30-727b-484f-b510-3644a3a7575e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emociones_tweets_df = pd.read_csv('../Data/Sidorov/corpus_marcado6emociones_extracted.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "529e94bc-e9b2-4853-bbef-db0be68e49b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emociones_tweets_df = emociones_tweets_df[emociones_tweets_df['emocion'].notnull()].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bf0e029e-e56d-4b3f-9a2e-ee937817f0fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_dict = {0:\"ira\", 1:\"miedo\", 2:\"tristeza\", 3:\"alegria\", 4:\"asco\", 5:\"sorpresa\", 6:\"otra\"}\n",
+    "map_dict_inverse = {v: k for k, v in map_dict.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4cdfd2ed-5f5f-4baf-acc6-1baa13a4b689",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emociones_tweets_df['label'] =emociones_tweets_df[\"emocion\"].str.lower().map(map_dict_inverse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7ebd39e6-b3c5-4853-a97a-51bdf44315e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emociones_tweets_df.to_csv('../Data/Sidorov/corpus_marcado6emociones_extracted.csv', index=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8e78b762-cb19-475d-aac1-aaae610aaef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(emociones_tweets_df[['text', 'label']], test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "682db4c3-b740-4c07-b83d-1213f8036603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.to_csv('../Data/Sidorov/sidorov_hugging_train.csv', index=False) \n",
+    "test.to_csv('../Data/Sidorov/sidorov_hugging_test.csv', index=False)  "
    ]
   }
  ],
