--- a/Code/Hugging_datasets.ipynb
+++ b/Code/Hugging_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "3d30a86a-15cf-4415-80d7-7ff88f980c64",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "from datasets import list_datasets, load_dataset\n",
     "from pprint import pprint\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -48,12 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "6b3a34ed-c9cf-4c56-bc74-00a15c3f37d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_dict = {0:\"ira\", 1:\"miedo\", 2:\"tristeza\", 3:\"alegria\", 4:\"asco\", 5:\"sorpresa\", 6:\"otra\"}"
+    "map_dict = {0:\"ira\", 1:\"miedo\", 2:\"tristeza\", 3:\"alegria\", 4:\"asco\", 5:\"sorpresa\", 6:\"otra\"}\n",
+    "map_dict_inverse = {v: k for k, v in map_dict.items()}"
    ]
   },
   {
@@ -81,6 +83,42 @@
    "outputs": [],
    "source": [
     "new_df = pd.read_csv('../Data/Emoevent/emoevent.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d3984a-064b-428e-a545-471df37c169e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emoevent_df = pd.read_csv('../Data/Emoevent/emoevent.csv')\n",
+    "emoevent_df = emoevent_df.rename(columns={\"tweet\": \"text\"})\n",
+    "emoevent_df['label'] = emoevent_df[\"emocion\"].map(map_dict_inverse)\n",
+    "emoevent_df = emoevent_df[['text', 'label']]\n",
+    "emoevent_df.to_csv('../Data/Emoevent/emoevent_hugging.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6cddfb3b-ec3f-45c6-891c-1bae551a15b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emoevent_df = pd.read_csv('../Data/Emoevent/emoevent_hugging.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "16ca8c0f-402f-44ec-a1ab-bdf3849c3ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(emoevent_df, test_size=0.2, random_state=42)\n",
+    "train.to_csv('../Data/Emoevent/emoevent_hugging_train.csv', index=False) \n",
+    "test.to_csv('../Data/Emoevent/emoevent_hugging_test.csv', index=False)  "
    ]
   },
   {
@@ -252,12 +290,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "4744262a-24c0-4def-8de4-666dc5f1b508",
    "metadata": {},
    "outputs": [],
    "source": [
     "semval_clean = pd.read_csv('../Data/Semval/semval.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a80b6659-95b6-4876-ae70-b8408b5c7007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "semval_clean['label'] = semval_clean[\"emocion\"].map(map_dict_inverse)\n",
+    "semval_clean.to_csv('../Data/Semval/semval.csv', index=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "886c804f-4f7a-47b7-9f34-82af5d4d2683",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_semval, test_semval = train_test_split(semval_clean[['']], test_size=0.2, random_state=42)\n",
+    "train_semval.to_csv('../Data/Semval/semval_hugging_train.csv', index=False) \n",
+    "test_semval.to_csv('../Data/Semval/semval_hugging_test.csv', index=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f7844954-ba98-48cd-b5e9-db37394fbfda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet</th>\n",
+       "      <th>emocion</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>422</th>\n",
+       "      <td>@moontxars Que afortunada es Crystal.</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2476</th>\n",
+       "      <td>A veces, lo que una persona necesita no es una...</td>\n",
+       "      <td>otra</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>@letyduranhdez Mira tu niña aburrida cuando ti...</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1351</th>\n",
+       "      <td>@BullDeMielda \"Sabes que no me ha bajado la re...</td>\n",
+       "      <td>miedo</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1438</th>\n",
+       "      <td>Hay tanta timidez en mi cuando se trata de ti.</td>\n",
+       "      <td>otra</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3106</th>\n",
+       "      <td>@BlizzardCSEU_ES  no se puede jugar desde él s...</td>\n",
+       "      <td>tristeza</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5181</th>\n",
+       "      <td>¿Por qué gran mierda borras los tuits, @juanfr...</td>\n",
+       "      <td>ira</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>378</th>\n",
+       "      <td>Ayer antes de irme me salió lo de la escoba y ...</td>\n",
+       "      <td>ira</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1499</th>\n",
+       "      <td>@Paloleichona @alfredodelmazo Te pasas jejeje</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4998</th>\n",
+       "      <td>Que domingo herrrrmoso!</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1045 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  tweet   emocion  label\n",
+       "422               @moontxars Que afortunada es Crystal.   alegria      3\n",
+       "2476  A veces, lo que una persona necesita no es una...      otra      6\n",
+       "23    @letyduranhdez Mira tu niña aburrida cuando ti...   alegria      3\n",
+       "1351  @BullDeMielda \"Sabes que no me ha bajado la re...     miedo      1\n",
+       "1438     Hay tanta timidez en mi cuando se trata de ti.      otra      6\n",
+       "...                                                 ...       ...    ...\n",
+       "3106  @BlizzardCSEU_ES  no se puede jugar desde él s...  tristeza      2\n",
+       "5181  ¿Por qué gran mierda borras los tuits, @juanfr...       ira      0\n",
+       "378   Ayer antes de irme me salió lo de la escoba y ...       ira      0\n",
+       "1499     @Paloleichona @alfredodelmazo Te pasas jejeje    alegria      3\n",
+       "4998                           Que domingo herrrrmoso!    alegria      3\n",
+       "\n",
+       "[1045 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_semval"
    ]
   },
   {
