--- a/Code/Hugging_datasets.ipynb
+++ b/Code/Hugging_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3d30a86a-15cf-4415-80d7-7ff88f980c64",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,22 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dad5f38a-00e9-42b0-9708-a5ecf3699f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "    new_text = []\n",
+    "    for t in text.split(\" \"):\n",
+    "        t = '@user' if t.startswith('@') and len(t) > 1 else t\n",
+    "        t = 'http' if t.startswith('http') else t\n",
+    "        new_text.append(t)\n",
+    "    return \" \".join(new_text)"
    ]
   },
   {
@@ -290,7 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
+   "id": "a80b6659-95b6-4876-ae70-b8408b5c7007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "semval_clean['label'] = semval_clean[\"emocion\"].map(map_dict_inverse)\n",
+    "semval_clean = semval_clean.rename(columns={\"tweet\": \"text\"})\n",
+    "semval_clean.to_csv('../Data/Semval/semval.csv', index=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "4744262a-24c0-4def-8de4-666dc5f1b508",
    "metadata": {},
    "outputs": [],
@@ -300,155 +328,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a80b6659-95b6-4876-ae70-b8408b5c7007",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "semval_clean['label'] = semval_clean[\"emocion\"].map(map_dict_inverse)\n",
-    "semval_clean.to_csv('../Data/Semval/semval.csv', index=False) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "886c804f-4f7a-47b7-9f34-82af5d4d2683",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_semval, test_semval = train_test_split(semval_clean[['']], test_size=0.2, random_state=42)\n",
+    "train_semval, test_semval = train_test_split(semval_clean[['text', 'label']], test_size=0.2, random_state=42)\n",
     "train_semval.to_csv('../Data/Semval/semval_hugging_train.csv', index=False) \n",
     "test_semval.to_csv('../Data/Semval/semval_hugging_test.csv', index=False)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "f7844954-ba98-48cd-b5e9-db37394fbfda",
+   "execution_count": 7,
+   "id": "308933f0-746d-460c-bd64-786884385210",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet</th>\n",
-       "      <th>emocion</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>422</th>\n",
-       "      <td>@moontxars Que afortunada es Crystal.</td>\n",
-       "      <td>alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2476</th>\n",
-       "      <td>A veces, lo que una persona necesita no es una...</td>\n",
-       "      <td>otra</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>@letyduranhdez Mira tu niña aburrida cuando ti...</td>\n",
-       "      <td>alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1351</th>\n",
-       "      <td>@BullDeMielda \"Sabes que no me ha bajado la re...</td>\n",
-       "      <td>miedo</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1438</th>\n",
-       "      <td>Hay tanta timidez en mi cuando se trata de ti.</td>\n",
-       "      <td>otra</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3106</th>\n",
-       "      <td>@BlizzardCSEU_ES  no se puede jugar desde él s...</td>\n",
-       "      <td>tristeza</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5181</th>\n",
-       "      <td>¿Por qué gran mierda borras los tuits, @juanfr...</td>\n",
-       "      <td>ira</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>378</th>\n",
-       "      <td>Ayer antes de irme me salió lo de la escoba y ...</td>\n",
-       "      <td>ira</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1499</th>\n",
-       "      <td>@Paloleichona @alfredodelmazo Te pasas jejeje</td>\n",
-       "      <td>alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4998</th>\n",
-       "      <td>Que domingo herrrrmoso!</td>\n",
-       "      <td>alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1045 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  tweet   emocion  label\n",
-       "422               @moontxars Que afortunada es Crystal.   alegria      3\n",
-       "2476  A veces, lo que una persona necesita no es una...      otra      6\n",
-       "23    @letyduranhdez Mira tu niña aburrida cuando ti...   alegria      3\n",
-       "1351  @BullDeMielda \"Sabes que no me ha bajado la re...     miedo      1\n",
-       "1438     Hay tanta timidez en mi cuando se trata de ti.      otra      6\n",
-       "...                                                 ...       ...    ...\n",
-       "3106  @BlizzardCSEU_ES  no se puede jugar desde él s...  tristeza      2\n",
-       "5181  ¿Por qué gran mierda borras los tuits, @juanfr...       ira      0\n",
-       "378   Ayer antes de irme me salió lo de la escoba y ...       ira      0\n",
-       "1499     @Paloleichona @alfredodelmazo Te pasas jejeje    alegria      3\n",
-       "4998                           Que domingo herrrrmoso!    alegria      3\n",
-       "\n",
-       "[1045 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_semval"
+    "semval_clean['text'] = semval_clean['text'].apply(preprocess)\n",
+    "train_semval, test_semval = train_test_split(semval_clean[['text', 'label']], test_size=0.2, random_state=42)\n",
+    "train_semval.to_csv('../Data/Semval/semval_hugging_train.csv', index=False) \n",
+    "test_semval.to_csv('../Data/Semval/semval_hugging_test.csv', index=False)  "
    ]
   },
   {
