--- a/Code/Hugging_datasets.ipynb
+++ b/Code/Hugging_datasets.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "6b3a34ed-c9cf-4c56-bc74-00a15c3f37d5",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f0d3984a-064b-428e-a545-471df37c169e",
    "metadata": {},
    "outputs": [],
@@ -112,29 +112,29 @@
     "emoevent_df = emoevent_df.rename(columns={\"tweet\": \"text\"})\n",
     "emoevent_df['label'] = emoevent_df[\"emocion\"].map(map_dict_inverse)\n",
     "emoevent_df = emoevent_df[['text', 'label']]\n",
-    "emoevent_df.to_csv('../Data/Emoevent/emoevent_hugging.csv', index=False)"
+    "emoevent_df.to_csv('../Data/Huggingface/emoevent_hugging.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "6cddfb3b-ec3f-45c6-891c-1bae551a15b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "emoevent_df = pd.read_csv('../Data/Emoevent/emoevent_hugging.csv')"
+    "emoevent_df = pd.read_csv('../Data/Huggingface/emoevent_hugging.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "16ca8c0f-402f-44ec-a1ab-bdf3849c3ac1",
    "metadata": {},
    "outputs": [],
    "source": [
     "train, test = train_test_split(emoevent_df, test_size=0.2, random_state=42)\n",
-    "train.to_csv('../Data/Emoevent/emoevent_hugging_train.csv', index=False) \n",
-    "test.to_csv('../Data/Emoevent/emoevent_hugging_test.csv', index=False)  "
+    "train.to_csv('../Data/Huggingface/emoevent_hugging_train.csv', index=False) \n",
+    "test.to_csv('../Data/Huggingface/emoevent_hugging_test.csv', index=False)  "
    ]
   },
   {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "4744262a-24c0-4def-8de4-666dc5f1b508",
    "metadata": {},
    "outputs": [],
@@ -328,27 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "886c804f-4f7a-47b7-9f34-82af5d4d2683",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_semval, test_semval = train_test_split(semval_clean[['text', 'label']], test_size=0.2, random_state=42)\n",
-    "train_semval.to_csv('../Data/Semval/semval_hugging_train.csv', index=False) \n",
-    "test_semval.to_csv('../Data/Semval/semval_hugging_test.csv', index=False)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "308933f0-746d-460c-bd64-786884385210",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "semval_clean['text'] = semval_clean['text'].apply(preprocess)\n",
-    "train_semval, test_semval = train_test_split(semval_clean[['text', 'label']], test_size=0.2, random_state=42)\n",
-    "train_semval.to_csv('../Data/Semval/semval_hugging_train.csv', index=False) \n",
-    "test_semval.to_csv('../Data/Semval/semval_hugging_test.csv', index=False)  "
+    "train_semval.to_csv('../Data/Huggingface/semval_hugging_train.csv', index=False) \n",
+    "test_semval.to_csv('../Data/Huggingface/semval_hugging_test.csv', index=False)  "
    ]
   },
   {
@@ -472,8 +459,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d58242b0-9eb1-423b-aa0e-f9307a53f8b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emoevent_hugging_train = pd.read_csv('../Data/Huggingface/emoevent_hugging_train.csv')\n",
+    "semval_hugging_train = pd.read_csv('../Data/Huggingface/semval_hugging_train.csv')\n",
+    "semval_emoevent_hugging_train = pd.concat([emoevent_hugging_train, semval_hugging_train])\n",
+    "semval_emoevent_hugging_train .to_csv('../Data/Huggingface/semval_emoevent_hugging_train.csv', index=False) \n",
+    "emoevent_hugging_test = pd.read_csv('../Data/Huggingface/emoevent_hugging_test.csv')\n",
+    "semval_hugging_test = pd.read_csv('../Data/Huggingface/semval_hugging_test.csv')\n",
+    "semval_emoevent_hugging_test = pd.concat([emoevent_hugging_train, semval_hugging_test])\n",
+    "semval_emoevent_hugging_test .to_csv('../Data/Huggingface/semval_emoevent_hugging_test.csv', index=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1c892907-9057-4fd2-bdaa-3f1d1b9dbfac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "semval_emoevent_hugging_train = pd.concat([emoevent_hugging_train, semval_hugging_train])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2ac57e5d-25bc-4eae-a95a-614d59225512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ante estos resultados, expectativa de avances ...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pobre #Venezuela, tan lejos de Dios y tan cerc...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>¿ARENGAS DE UN GOLPISTA?: Disturbios en Caraca...</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>La negociación y el diálogo será la clave para...</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cersei se encuentra buscando lentillas de colo...</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1040</th>\n",
+       "      <td>@user  no se puede jugar desde él sabado ..</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041</th>\n",
+       "      <td>¿Por qué gran mierda borras los tuits, @user C...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042</th>\n",
+       "      <td>Ayer antes de irme me salió lo de la escoba y ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043</th>\n",
+       "      <td>@user @user Te pasas jejeje</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1044</th>\n",
+       "      <td>Que domingo herrrrmoso!</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7599 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  label\n",
+       "0     Ante estos resultados, expectativa de avances ...      3\n",
+       "1     Pobre #Venezuela, tan lejos de Dios y tan cerc...      2\n",
+       "2     ¿ARENGAS DE UN GOLPISTA?: Disturbios en Caraca...      6\n",
+       "3     La negociación y el diálogo será la clave para...      6\n",
+       "4     Cersei se encuentra buscando lentillas de colo...      6\n",
+       "...                                                 ...    ...\n",
+       "1040        @user  no se puede jugar desde él sabado ..      2\n",
+       "1041  ¿Por qué gran mierda borras los tuits, @user C...      0\n",
+       "1042  Ayer antes de irme me salió lo de la escoba y ...      0\n",
+       "1043                       @user @user Te pasas jejeje       3\n",
+       "1044                           Que domingo herrrrmoso!       3\n",
+       "\n",
+       "[7599 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "semval_emoevent_hugging_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e78cda68-4170-4743-82fe-e7472d20816b",
    "metadata": {},
    "outputs": [],
    "source": []
