--- a/Code/Hugging_datasets.ipynb
+++ b/Code/Hugging_datasets.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "d58242b0-9eb1-423b-aa0e-f9307a53f8b9",
    "metadata": {},
    "outputs": [],
@@ -470,9 +470,30 @@
     "semval_emoevent_hugging_train .to_csv('../Data/Huggingface/semval_emoevent_hugging_train.csv', index=False) \n",
     "emoevent_hugging_test = pd.read_csv('../Data/Huggingface/emoevent_hugging_test.csv')\n",
     "semval_hugging_test = pd.read_csv('../Data/Huggingface/semval_hugging_test.csv')\n",
-    "semval_emoevent_hugging_test = pd.concat([emoevent_hugging_train, semval_hugging_test])\n",
+    "semval_emoevent_hugging_test = pd.concat([emoevent_hugging_test, semval_hugging_test])\n",
     "semval_emoevent_hugging_test .to_csv('../Data/Huggingface/semval_emoevent_hugging_test.csv', index=False) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4c9b884a-73cc-4a8a-ad18-4ceef9b8731f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sidorov_hugging_train = pd.read_csv('../Data/Huggingface/sidorov_hugging_train.csv')\n",
+    "full_hugging_train = pd.concat([emoevent_hugging_train, semval_hugging_train, sidorov_hugging_train])\n",
+    "sidorov_hugging_test = pd.read_csv('../Data/Huggingface/sidorov_hugging_test.csv')\n",
+    "full_hugging_test = pd.concat([emoevent_hugging_test, semval_hugging_test, sidorov_hugging_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f0f9e0-c66c-44ca-930e-febe436a95c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
