--- a/Code/Hugging_datasets.ipynb
+++ b/Code/Hugging_datasets.ipynb
@@ -476,15 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "4c9b884a-73cc-4a8a-ad18-4ceef9b8731f",
    "metadata": {},
    "outputs": [],
    "source": [
     "sidorov_hugging_train = pd.read_csv('../Data/Huggingface/sidorov_hugging_train.csv')\n",
     "full_hugging_train = pd.concat([emoevent_hugging_train, semval_hugging_train, sidorov_hugging_train])\n",
+    "full_hugging_train.to_csv('../Data/Huggingface/full_hugging_train.csv', index=False) \n",
     "sidorov_hugging_test = pd.read_csv('../Data/Huggingface/sidorov_hugging_test.csv')\n",
-    "full_hugging_test = pd.concat([emoevent_hugging_test, semval_hugging_test, sidorov_hugging_test])"
+    "full_hugging_test = pd.concat([emoevent_hugging_test, semval_hugging_test, sidorov_hugging_test])\n",
+    "full_hugging_test.to_csv('../Data/Huggingface/full_hugging_test.csv', index=False) "
    ]
   },
   {
