--- a/Code/Extraccion_tweets _sidorov.ipynb
+++ b/Code/Extraccion_tweets _sidorov.ipynb
@@ -14,6 +14,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "ff54b920-299c-4f40-8e71-84d30f712048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "    new_text = []\n",
+    "    for t in text.split(\" \"):\n",
+    "        t = '' if t.startswith('#') and len(t) > 1 else t\n",
+    "        new_text.append(t)\n",
+    "    return \" \".join(new_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "7225f07d-3841-4a84-a6aa-f9953f759670",
    "metadata": {},
@@ -119,7 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
+   "id": "540df484-cd99-49ef-b177-18410d541e98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emociones_tweets_df['text'] = emociones_tweets_df['text'].apply(preprocess)\n",
+    "emociones_tweets_df.to_csv('../Data/Sidorov/sidorov_clean.csv', index=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "8e78b762-cb19-475d-aac1-aaae610aaef6",
    "metadata": {},
    "outputs": [],
@@ -140,178 +166,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "99ed5c9c-a5bd-4f42-aa68-a2ebda9acd87",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>emocion</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>465049714141200384</td>\n",
-       "      <td>Buuenoos diiias ya estoy con mii pekeñaa!! Y c...</td>\n",
-       "      <td>Alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>468241881428951041</td>\n",
-       "      <td>Nuevos proyectos, nuevas metas, una nueva sema...</td>\n",
-       "      <td>Alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>469580509895729153</td>\n",
-       "      <td>Hay altísimas posibilidades de a ver echo bien...</td>\n",
-       "      <td>Alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>469251121354391553</td>\n",
-       "      <td>Me tome un taxi con el primer tachero del mund...</td>\n",
-       "      <td>Alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>468435168693211136</td>\n",
-       "      <td>Lindos trofeos trajo el rojo ayer!!! ☺ #Feliz ...</td>\n",
-       "      <td>Alegria</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9770</th>\n",
-       "      <td>9774</td>\n",
-       "      <td>518951595971977216</td>\n",
-       "      <td>Acabo de mandar un tweet de R***ng y la PC se ...</td>\n",
-       "      <td>Miedo</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9771</th>\n",
-       "      <td>9775</td>\n",
-       "      <td>518952999121469440</td>\n",
-       "      <td>\"Con Palermo no pudo, con Guillermo no pudo y ...</td>\n",
-       "      <td>Miedo</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9772</th>\n",
-       "      <td>9776</td>\n",
-       "      <td>518953127949905922</td>\n",
-       "      <td>Nose pero el remisero del 29 que se parece a C...</td>\n",
-       "      <td>Miedo</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9773</th>\n",
-       "      <td>9777</td>\n",
-       "      <td>518976161511374848</td>\n",
-       "      <td>De todas formas mi atención está en que el pró...</td>\n",
-       "      <td>Miedo</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9774</th>\n",
-       "      <td>9778</td>\n",
-       "      <td>518979052481552385</td>\n",
-       "      <td>Vieron cuando piensas una situación y después ...</td>\n",
-       "      <td>Miedo</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9775 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      index                  id  \\\n",
-       "0         0  465049714141200384   \n",
-       "1         1  468241881428951041   \n",
-       "2         2  469580509895729153   \n",
-       "3         3  469251121354391553   \n",
-       "4         4  468435168693211136   \n",
-       "...     ...                 ...   \n",
-       "9770   9774  518951595971977216   \n",
-       "9771   9775  518952999121469440   \n",
-       "9772   9776  518953127949905922   \n",
-       "9773   9777  518976161511374848   \n",
-       "9774   9778  518979052481552385   \n",
-       "\n",
-       "                                                   text  emocion  label  \n",
-       "0     Buuenoos diiias ya estoy con mii pekeñaa!! Y c...  Alegria      3  \n",
-       "1     Nuevos proyectos, nuevas metas, una nueva sema...  Alegria      3  \n",
-       "2     Hay altísimas posibilidades de a ver echo bien...  Alegria      3  \n",
-       "3     Me tome un taxi con el primer tachero del mund...  Alegria      3  \n",
-       "4     Lindos trofeos trajo el rojo ayer!!! ☺ #Feliz ...  Alegria      3  \n",
-       "...                                                 ...      ...    ...  \n",
-       "9770  Acabo de mandar un tweet de R***ng y la PC se ...    Miedo      1  \n",
-       "9771  \"Con Palermo no pudo, con Guillermo no pudo y ...    Miedo      1  \n",
-       "9772  Nose pero el remisero del 29 que se parece a C...    Miedo      1  \n",
-       "9773  De todas formas mi atención está en que el pró...    Miedo      1  \n",
-       "9774  Vieron cuando piensas una situación y después ...    Miedo      1  \n",
-       "\n",
-       "[9775 rows x 5 columns]"
+       "'Todos dios intenta dar una buena imagen por las redes sociales.... y luego si los vieras en persona te llevas disgustos #asco'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emociones_tweets_df"
+    "emociones_tweets_df['text'][2000]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "540df484-cd99-49ef-b177-18410d541e98",
+   "id": "1db4c4ff-6d97-45dd-a8ff-e7e26051ff62",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train"
+   ]
   }
  ],
  "metadata": {
